--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -1,1 +1,199 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: gilroy;
 
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+   
+
+}
+
+#main {
+    height: 100%;
+    width: 100%;
+   
+}
+
+#nav {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 30px 40px;
+
+}
+
+#nav h3 {
+    background-color: black;
+    color: white;
+    padding: 15px 25px;
+    font-size: 22px;
+    border-radius: 50px;
+    margin-left: 5px;
+}
+
+#intro {
+    height: 45%;
+    width: 100%;
+    padding: 50px 60px;
+
+}
+
+#intro h1 {
+    font-size: 145px;
+    line-height: 133px;
+    letter-spacing: -4px;
+}
+
+#place {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+#place h3,
+#place h4 {
+    font-size: 30px;
+    font-weight: 600;
+
+}
+
+#hero {
+    height: 87%;
+    width: 100%;
+    background-image: url(https://assets-global.website-files.com/64589fb989b2b33c593db89d/6458a6db645ec6a527000cfa_home-hero-p-2000.webp);
+    background-size: cover;
+}
+
+#about {
+
+    height: 45%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 60px;
+
+}
+
+#about h2 {
+    font-size: 92px;
+    width: 60%;
+    line-height: 83px;
+    font-weight: 600;
+    letter-spacing: -2px;
+}
+
+#about-part2 {
+    width: 36%;
+    height: 100%;
+    padding: 0 60px;
+    border-left: 2px solid black;
+    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#about-part2 h3 {
+    font-size: 33px;
+    font-weight: 600;
+}
+
+#icons i {
+    background-color: black;
+    color: white;
+    padding: 7px;
+    font-size: 25px;
+    border-radius: 50px;
+    margin-right: 10px;
+}
+#work {
+    height: 55%;
+    width: 100%;
+    border-top: 2px solid black;
+    display: flex;
+    padding: 50px 60px;
+
+}
+
+#work1 {
+    width: 35%;
+    padding-right: 60px;
+    height: 100%;
+    border-right: 2px solid black;
+    display: flex;
+    justify-content: space-between;
+       border-bottom: 2px solid black;
+
+
+
+}
+
+#work1 h3 {
+    font-size: 33px;
+    font-weight: 600;
+}
+
+#work1 i {
+    font-size: 33px;
+}
+
+#work2 {
+    width: 60%;
+    height: 100%;
+    padding: 0 60px;
+       border-bottom: 2px solid black;
+    
+
+
+
+}
+
+.work2-part {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+}
+
+.work2-part:nth-child(1) {
+    border-bottom: 2px solid black;
+}
+
+.work2-part .elem {
+    width: 50%;
+    height: 100%;
+}
+
+.work2-part .elem:first-child {
+    border-right: 2px solid black;
+    padding-right: 50px;
+}
+
+.work2-part .elem:last-child {
+    padding-left: 50px;
+}
+
+
+.work2-part .elem h4 {
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.work2-part .elem p {
+    font-size: 20px;
+    color: #000000b8;
+    font-weight: 500;
+
+}
